# duckdb-example

./: .gitignore  README.md  create_db.py  create_novadrive_db.py  create_users_table_question_4.py  create_view_question_3.py  generate_novadrive_data.py  mock_data.csv  my_database.db  novadrive_q1.sql  novadrive_q2.sql  novadrive_q3.sql  novadrive_q4.sql  novadrive_q5.sql  pyproject.toml  question_1.sql  question_2_simple.sql  question_3.sql  question_4.sql  read_csv.py  read_db.py
.github/workflows/: ci.yml
tests/: test_novadrive.py
