[project]
name = "duckdb-example"
version = "0.1.0"
description = ""
authors = [
    {name = "vem", email = "victoremnm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2,<2.0.0",
    "pandas>=2.3.1,<3.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0"]
